--- a/index.html
+++ b/index.html
@@ -18,52 +18,8 @@
     </div>
     <div class="wrapper show-nav">
       
-      <div class="canvas ">
-        <div class="sidebar">
-          <ul class="sidebar-favorites">
-            <li class="favorites">
-              <h4>
-                <i class="mr5 fa fa-star fa-lg"></i> Favorites
-              </h4>          
-            </li>            
-            <!-- <li class="divider"><hr></li> -->
-            <li class="item">
-              <a href="javascript:void(0);">Stuff</a>
-            </li>
-            <li class="item">
-              <a href="javascript:void(0);">Otomedori.zip</a>
-            </li>            
-          </ul>
-          <ul class="sidebar-directory">
-            <li class="divider"><hr></li>
-            <li class="directory">
-              <h4 >
-                <i class="mr5 fa fa-sitemap fa-lg"></i> Directory - Documents
-              </h4>
-            </li>
-            
-            <li class="item">
-              <a href="javascript:void(0);">
-              <i class="fa fa-folder-open"></i>
-                Documents
-              </a>
-            </li>
-            <li class="item">
-              <a style="padding-left:20px" href="javascript:void(0);">
-              <i class="fa fa-folder"></i>
-                Pictures
-              </a>
-            </li>
-          </ul>
-          <ul class="sidebar-settings">
-            <li class="divider"><hr></li>
-            <li >
-              <a href="javascript:void(0);"> 
-                <i class="fa fa-gear fa-lg control"></i> Settings
-              </a>
-            </li>
-          </ul>
-        </div>
+      <div class="canvas">
+        <sidebar></sidebar>
 
         <div class="content">
 
