Refactoring and improving

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </script>
     </head>
     <body>
-        <div class="topbar">
+        <div class="topbar indigo darken-2">
             <i class="material-icons control" data-bind="toggleNav:'.wrapper'">menu</i>
             
             <span class="title-text" data-bind="text:appTitle"></span>
