Implement TG-39 and TG-40 #in-progress

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                 </div>
                 
                 <div class="content" data-bind="visible: currentPage() == 'favorites-list'">
-                    <favorites-list params="
-                    favorites:favorites">                    
+                    <favorites-list params="favorites:favorites">                    
                     </favorites-list>
                 </div>
             </div>
