Implement TG-42 #done, TG-51 #done

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     </template>
     <template id="favorites-list-view">
         <favorites-list params="favorites:favorites,
-            selectedManga:selectedManga">                    
+            selectedManga:selectedManga,
+            currentPage: currentPage">                    
         </favorites-list>
     </template>
     <template id="view-manga-view">
