Add material titlebar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         </script>
     </head>
     <body >
+        <div class="title-bar cyan darken-2" style="-webkit-app-region: drag">            
+            <a class="right close-icon valign-wrapper">
+                <i class="material-icons valign">close</i>
+            </a>
+        </div>
         <topbar params="selectedManga:selectedManga,
             favorites: favorites,
             currentPage: currentPage,
@@ -18,7 +23,7 @@
             currentViewMangaPage: currentViewMangaPage,
             viewMangaCommand: viewMangaCommand,
             searching: searching,
-            appCommands: appCommands" style="-webkit-app-region: drag">
+            appCommands: appCommands" >
 
         </topbar>
         <div class="wrapper show-nav">
