Refactoring and add material title bar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         </script>
     </head>
     <body >
-        <div class="title-bar cyan darken-2" style="-webkit-app-region: drag">            
-            <a class="right close-icon valign-wrapper">
+        <div class="title-bar cyan darken-2" style="-webkit-app-region: drag">
+            <!-- <span data-bind="text:appTitle"></span>             -->
+            <a class="right close-icon valign-wrapper" href="javascript:void(0);" data-bind="click:closeWindow">
                 <i class="material-icons valign">close</i>
             </a>
         </div>
