--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <title data-bind="text:appTitle"></title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <base href="../">
+        <base href="./">
         <script>
         // You can also require other files to run in this process
-        require("../dist/app-bundle.js");
+        require("./bundle/app-bundle.js");
         </script>
     </head>
     <body >
