--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="title-bar cyan darken-2 valign-wrapper" style="-webkit-app-region: drag">
-        <img class="product-logo" src="16x16.png" alt="">
+        <img class="product-logo" src="icon.png" alt="">
         <span class="valign app-title" data-bind="text:appTitle"></span>
         <a class="button-icon valign-wrapper" href="javascript:void(0);" data-bind="click:minimize">
             <i class="material-icons valign">space_bar</i>
