Implement for TG-116 #in-progress, TG-117 #in-progress

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
         </div>
     </div>
     <error-dialog></error-dialog>
+    <about-dialog></about-dialog>
 </body>
 
 <template id="manga-list-view">
@@ -94,9 +95,8 @@
     <settings-page params="
             isRecursive: isRecursive, 
             commands:appCommands">
-
-        <settings-page>
-            <file-drag-overlay></file-drag-overlay>
+    </settings-page>
+    <file-drag-overlay></file-drag-overlay>
 </template>
 
 </html>
