--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="title-bar cyan darken-2 valign-wrapper" style="-webkit-app-region: drag">
+    <!--<div class="title-bar cyan darken-2 valign-wrapper" style="-webkit-app-region: drag">
         <img class="product-logo" src="icon.png" alt="">
         <span class="valign app-title" data-bind="text:appTitle"></span>
         <a class="button-icon valign-wrapper" href="javascript:void(0);" data-bind="click:minimize">
@@ -25,7 +25,7 @@
         <a class="close-icon valign-wrapper" href="javascript:void(0);" data-bind="click:closeWindow">
             <i class="material-icons valign">close</i>
         </a>
-    </div>
+    </div>-->
     <topbar params="selectedManga:selectedManga,
             favorites: favorites,
             currentPage: currentPage,
