Fix image fit in settings to be saved and set correctly

--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
         selectedMangaPath:selectedMangaPath,
         currentViewMangaPage: currentViewMangaPage,
         viewMangaCommand: viewMangaCommand,
+        imageFit: imageFit,
         appCommands: appCommands
     }} -->
     <!-- /ko -->
@@ -102,6 +103,7 @@
     <settings-page params="
             isRecursive: isRecursive, 
             commands:appCommands,
+            imageFit: imageFit,
             isDetectUpdatesOnStart:isDetectUpdatesOnStart">
     </settings-page>
     <file-drag-overlay></file-drag-overlay>
