Fix hotkey not updating when toggling favorite when viewing manga

--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,9 @@
         currentViewMangaPage: currentViewMangaPage,
         viewMangaCommand: viewMangaCommand,
         imageFit: imageFit,
-        appCommands: appCommands
+        appCommands: appCommands,
+        currentPage: currentPage,
+        previousPage: previousPage
     }} -->
     <!-- /ko -->
     <file-drag-overlay></file-drag-overlay>
